<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HST Camera</string>
    <string name="capture">CAPTURE</string>
    <string name="arm">ARM</string>
    <string name="unarm">UNARM</string>
    <string name="status_initializing">Initializing…</string>
    <string name="more">MORE</string>
    <string name="fps_960">960fps 1080p</string>
    <string name="fps_1920">1920fps 720p</string>
    <string name="settings_title">Settings</string>
    <string name="settings_engine">Engine</string>
    <string name="engine_huawei_sdk">Huawei CameraKit SDK</string>
    <string name="engine_camera2_direct">Camera2 Direct (vendor tags)</string>
    <string name="engine_custom_sdk">Patched HwCameraKit</string>
    <string name="settings_fps">Frame Rate</string>
    <string name="settings_http_server">HTTP Server</string>
    <string name="settings_push_external">Push to External Drive</string>
    <string name="settings_clear_recordings">Clear All Recordings</string>
    <string name="settings_clear_external">Clear External Drive Recordings</string>
    <string name="settings_about">About</string>
    <string name="settings_github">View on GitHub</string>
    <string name="settings_remote_trigger">Remote Triggering</string>
    <string name="serial_arming">Arming via serial…</string>
    <string name="serial_arm_timeout">No response from trigger device (timeout)</string>
    <string name="serial_disconnected">Trigger device disconnected</string>
    <string name="settings_esp_led_pin">LED Pin</string>
    <string name="settings_esp_led_on_ms">LED On (ms)</string>
    <string name="settings_esp_cooldown_s">Cooldown (s)</string>
    <string name="settings_esp_trigger_delay_ms">Trigger Delay (ms)</string>
    <string name="settings_esp_triggers">GPIO Triggers</string>
    <string name="settings_add_trigger">+ Add Trigger</string>
    <string name="edge_rising">Rising (/)</string>
    <string name="edge_falling">Falling (\\)</string>
    <string name="edge_both">Both (X)</string>
</resources>
