<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:shadowColor="@android:color/black"
            android:shadowRadius="3"
            android:text="@string/status_initializing"
            android:layout_marginBottom="12dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/captureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture"
                android:enabled="false" />

            <Button
                android:id="@+id/armButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arm"
                android:enabled="false"
                android:layout_marginStart="12dp" />

            <Button
                android:id="@+id/fpsToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fps_1920"
                android:textSize="11sp"
                android:layout_marginStart="12dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
